--- a/about/index.html
+++ b/about/index.html
@@ -185,7 +185,7 @@
         </div>
       </div>
 
-      <div class="Grid Grid--full">
+      <div class="Grid Grid--full marginResponsiveGrid">
         <div class="Grid-cell Grey700">
 
         </div>
@@ -315,7 +315,7 @@
     </div>
   </div>
 
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <div class="element">
@@ -384,7 +384,7 @@
   <div class="blankHS"></div>
 
   <div class="wrapper">
-    <div class="Grid Grid--full">
+    <div class="Grid Grid--full marginResponsiveGrid">
       <div class="Grid-cell">
         <div class="element">
 
@@ -568,7 +568,7 @@
   <!-- Arrow -->
   <div class="blankHM"></div>
 
-  <div class="Grid Grid--full u-textCenter">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
 
     <ul class="tags" id="TagsCloud">
 
@@ -622,7 +622,7 @@
   <div class="blankHM"></div>
   <!-- message -->
   <div class="blankHL"></div>
-  <div class="Grid Grid--full u-textCenter">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -757,7 +757,7 @@
       </div>
     </div>
     <div class="blankHS"></div>
-    <div class="Grid Grid--full wrapper">
+    <div class="Grid Grid--full marginResponsiveGrid wrapper">
       <div class="Grid-cell">
         <div class="footerBorder">
           <div class="element">
