--- a/architecture/index.html
+++ b/architecture/index.html
@@ -166,7 +166,7 @@
         </div>
       </div>
 
-      <div class="Grid Grid--full">
+      <div class="Grid Grid--full marginResponsiveGrid">
         <div class="Grid-cell Grey700">
           <h3>Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are
             exemplified in the following projects. These projects placed great emphasis on the significant determinants
@@ -413,7 +413,7 @@
   <!-- Arrow -->
   <div class="blankHM"></div>
 
-  <div class="Grid Grid--full u-textCenter">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
 
     <ul class="tags" id="TagsCloud">
 
@@ -467,7 +467,7 @@
   <div class="blankHM"></div>
   <!-- message -->
   <div class="blankHM"></div>
-  <div class="Grid Grid--full u-textCenter">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -601,7 +601,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full wrapper">
+      <div class="Grid Grid--full marginResponsiveGrid wrapper">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
