--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -182,7 +182,7 @@
   <div class="blankHM"></div>
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Methodology <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -245,7 +245,7 @@
   <div class="blankHM"></div>
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Site and Programs <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -275,7 +275,7 @@
   <hr>
   <div class="blankHM"></div>
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Flyover View <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -308,7 +308,7 @@
   <div class="blankHM"></div>
 
     <!-- Arrow -->
-    <div class="Grid Grid--full wrapper">
+    <div class="Grid Grid--full marginResponsiveGrid wrapper">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow">Site <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -354,7 +354,7 @@
 
   <!-- message -->
   <div class="blankHM"></div>
-  <div class="Grid Grid--full u-textCenter">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -481,7 +481,7 @@
 
 
     <div class="blankHS"></div>
-    <div class="Grid Grid--full wrapper">
+    <div class="Grid Grid--full marginResponsiveGrid wrapper">
       <div class="Grid-cell">
         <div class=" footerBorder">
           <div class="element">
