--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -175,7 +175,7 @@
   <div class="blankHM"></div>
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Programs and Diagrams<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -211,7 +211,7 @@
   <div class="blankHM"></div>
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Renders<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -245,7 +245,7 @@
   <div class="blankHM"></div>
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Site and Floor Plan<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -298,7 +298,7 @@
   <!-- site -->
   <!-- message -->
   <div class="blankHM"></div>
-  <div class="Grid Grid--full u-textCenter">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -425,7 +425,7 @@
 
 
     <div class="blankHS"></div>
-    <div class="Grid Grid--full wrapper">
+    <div class="Grid Grid--full marginResponsiveGrid wrapper">
       <div class="Grid-cell">
         <div class=" footerBorder">
           <div class="element">
