--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -189,7 +189,7 @@
   <div class="blankHM"></div>
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Programs <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -200,7 +200,7 @@
   <!-- Arrow -->
 
   <div class="wrapper">
-    <div class="Grid Grid--full u-textCenter">
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <img src="programs.jpg" alt="DIAGRAM">
       </div>
@@ -215,7 +215,7 @@
     <hr>
     <div class="blankHM"></div>
 
-    <div class="Grid Grid--full u-textCenter">
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <img src="diagram0.jpg" alt="DIAGRAM">
       </div>
@@ -235,7 +235,7 @@
 
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Diagrams <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -301,7 +301,7 @@
   <hr>
   <div class="blankHM"></div>
   <!--Section Perspective -->
-  <div class="Grid Grid--full u-textCenter wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
     <div class="Grid-cell">
       <div class="element">
 
@@ -321,7 +321,7 @@
 
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Renders <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -333,7 +333,7 @@
 
   <div class="blankHM"></div>
   <!-- renders -->
-  <div class="Grid Grid--full u-textCenter wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
     <div class="Grid-cell">
       <div class="element">
         <img src="render_int1.jpg" alt="render">
@@ -351,7 +351,7 @@
   <hr>
   <div class="blankHM"></div>
   <!-- renders -->
-  <div class="Grid Grid--full u-textCenter wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
     <div class="Grid-cell">
       <div class="element">
         <img src="render_int2.jpg" alt="render">
@@ -367,7 +367,7 @@
   <hr>
   <div class="blankHM"></div>
   <!-- renders -->
-  <div class="Grid Grid--full u-textCenter wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
     <div class="Grid-cell">
       <div class="element">
         <img src="render_streetview.jpg" alt="render">
@@ -385,7 +385,7 @@
 
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Plans and Sections <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -397,7 +397,7 @@
   <div class="blankHM"></div>
   <!-- floor plans -->
 
-  <div class="Grid Grid--full u-textCenter wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
     <div class="Grid-cell">
       <img src="plan_f1.jpg" alt="Floor Plans">
     </div>
@@ -410,7 +410,7 @@
   <hr>
   <div class="blankHS"></div>
 
-  <div class="Grid Grid--full u-textCenter wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
     <div class="Grid-cell">
       <img src="plan_f3.jpg" alt="Floor Plans">
     </div>
@@ -422,7 +422,7 @@
   <div class="blankHS"></div>
   <hr>
   <div class="blankHS"></div>
-  <div class="Grid Grid--full u-textCenter wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
     <div class="Grid-cell">
       <img src="plan_f3.jpg" alt="Floor Plans">
     </div>
@@ -437,7 +437,7 @@
   <div class="blankHS"></div>
 
   <!-- sections -->
-  <div class="Grid Grid--full u-textCenter wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
     <div class="Grid-cell">
       <img src="section_1.jpg" alt="Floor Plans">
     </div>
@@ -446,7 +446,7 @@
       <h5>North - South</h5>
     </div>
   </div>
-  <div class="Grid Grid--full u-textCenter wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
     <div class="Grid-cell">
       <img src="section_2.jpg" alt="Floor Plans">
     </div>
@@ -462,7 +462,7 @@
 
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Site <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -472,7 +472,7 @@
   </div>
   <!-- Arrow -->
   <div class="blankHM"></div>
-  <div class="Grid Grid--full u-textCenter wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
     <div class="Grid-cell">
       <div class="element">
 
@@ -491,7 +491,7 @@
 
 <!-- message -->
 <div class="blankHM"></div>
-<div class="Grid Grid--full u-textCenter">
+<div class="Grid Grid--full marginResponsiveGrid u-textCenter">
   <div class="Grid-cell">
     <div data-aos="fade-up">
       <h4 class="element">
@@ -615,7 +615,7 @@
 
 
   <div class="blankHS"></div>
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class=" footerBorder">
         <div class="element">
