--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           </div>
         </div>
 
-        <div class="Grid Grid--full">
+        <div class="Grid Grid--full marginResponsiveGrid">
           <div class="Grid-cell">
             <h3>I work with a small team based in San Francisco to design business and consumer-facing websites. My
               strength lies in understanding complex problems and requirements and transforming them into simple and
@@ -421,7 +421,7 @@
     <!-- Arrow -->
     <div class="blankHM"></div>
 
-    <div class="Grid Grid--full u-textCenter">
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
       <ul class="tags" id="TagsCloud">
 
         <li class="tag"><span class="box"> User-centered Design</span></li>
@@ -477,7 +477,7 @@
 
     <!-- message -->
     <div class="blankHM"></div>
-    <div class="Grid Grid--full u-textCenter">
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <div data-aos="fade-up">
           <h4 class="element">
@@ -611,7 +611,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full wrapper">
+      <div class="Grid Grid--full marginResponsiveGrid wrapper">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
