--- a/photography/index.html
+++ b/photography/index.html
@@ -167,7 +167,7 @@
           </div>
         </div>
       </div>
-      <div class="Grid Grid--full">
+      <div class="Grid Grid--full marginResponsiveGrid">
         <div class="Grid-cell Grey700">
           <h3>Through my unique perspective and lens, I find joy in capturing the intricate narratives and inherent
             beauty of natural elements in my photography. Whether it's a sweeping landscape or a tiny detail, I strive
@@ -185,7 +185,7 @@
   <main>
     <div class="blankHS"></div>
 
-    <div class="Grid Grid--full u-textCenter">
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <h1 class="Grid Grid--center"> <span class="specialTextL">Photographs</span><img class="moveUpDown widthLogo"
             src="../icon/arrow-down.svg" alt="Scroll down">
@@ -237,7 +237,7 @@
         </div>
         <div class="blankHS"></div>
         <div class="wrapper">
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--full marginResponsiveGrid">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -368,7 +368,7 @@
         <div class="blankHS"></div>
 
         <div class="wrapper">
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--full marginResponsiveGrid">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -439,7 +439,7 @@
         </div>
         <div class="blankHS"></div>
         <div class="wrapper">
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--full marginResponsiveGrid">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -470,7 +470,7 @@
         </div>
         <div class="blankHS"></div>
         <div class="wrapper">
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--full marginResponsiveGrid">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -539,7 +539,7 @@
         <div class="blankHS"></div>
 
         <div class="wrapper">
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--full marginResponsiveGrid">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -770,7 +770,7 @@
         <div class="blankHS"></div>
 
         <div class="wrapper">
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--full marginResponsiveGrid">
 
             <div class="Grid-cell">
               <div class="element">
@@ -817,7 +817,7 @@
   <!-- Arrow -->
   <div class="blankHM"></div>
 
-  <div class="Grid Grid--full u-textCenter">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <ul class="tags" id="TagsCloud">
 
       <li class="tag"><span class="box"> User-centered Design</span></li>
@@ -872,7 +872,7 @@
 
   <!-- message -->
   <div class="blankHM"></div>
-  <div class="Grid Grid--full u-textCenter">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -1004,7 +1004,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full wrapper">
+      <div class="Grid Grid--full marginResponsiveGrid wrapper">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
