--- a/architecture/other_academic_works/index.html
+++ b/architecture/other_academic_works/index.html
@@ -330,7 +330,7 @@
     </div>
   </div>
   <div class="blankHS"></div>
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element footerBorder">
         <div class="element">
