--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -194,7 +194,7 @@
   <div class="blankHM"></div>
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> On Site Research <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -228,7 +228,7 @@
 
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Site & Research <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -280,7 +280,7 @@
 
 
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Photos of Sequences and Movements <img class="seArrow" src="../../icon/arrow-se.svg"
@@ -315,7 +315,7 @@
   <hr>
   <div class="blankHM"></div>
   <!-- Arrow -->
-  <div class="Grid Grid--full wrapper">
+  <div class="Grid Grid--full marginResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> Manipulation <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -368,7 +368,7 @@
   <div class="blankHM"></div>
 
     <!-- Arrow -->
-    <div class="Grid Grid--full wrapper">
+    <div class="Grid Grid--full marginResponsiveGrid wrapper">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow"> Project <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -450,7 +450,7 @@
 
   <!-- message -->
   <div class="blankHM"></div>
-  <div class="Grid Grid--full u-textCenter">
+  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -577,7 +577,7 @@
 
 
     <div class="blankHS"></div>
-    <div class="Grid Grid--full wrapper">
+    <div class="Grid Grid--full marginResponsiveGrid wrapper">
       <div class="Grid-cell">
         <div class=" footerBorder">
           <div class="element">
