--- a/navigation/V1/index.html
+++ b/navigation/V1/index.html
@@ -379,7 +379,7 @@
           <!-- Arrow -->
           <!-- Img -->
 
-          <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
               </div>
@@ -441,7 +441,7 @@
 
           <div class="wrapper">
 
-            <div class="Grid Grid--full">
+            <div class="Grid Grid--full marginResponsiveGrid">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -456,7 +456,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full">
+            <div class="Grid Grid--full marginResponsiveGrid">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -484,7 +484,7 @@
               </div>
             </div>
 
-            <div class="Grid Grid--full">
+            <div class="Grid Grid--full marginResponsiveGrid">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -499,7 +499,7 @@
                 </div>
               </div>
             </div>
-            <div class="Grid Grid--full">
+            <div class="Grid Grid--full marginResponsiveGrid">
               <div class="Grid-cell">
                 <div class="element ">
                   <div class="element cardAPPOINTA">
@@ -538,7 +538,7 @@
           <!-- Arrow -->
           <!-- Img -->
 
-          <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
               </div>
@@ -558,7 +558,7 @@
           <!-- Arrow -->
           <!-- Img -->
 
-          <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
               </div>
@@ -567,7 +567,7 @@
           <!-- Img -->
           <!-- Img -->
 
-          <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
               </div>
@@ -576,7 +576,7 @@
           <!-- Img -->
           <!-- Img -->
 
-          <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
               </div>
@@ -646,7 +646,7 @@
           <!-- Arrow -->
           <!-- Img -->
 
-          <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
               </div>
@@ -672,7 +672,7 @@
             <!-- Arrow -->
             <!-- Img -->
 
-            <div class="Grid Grid--full u-textCenter wrapper">
+            <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -861,7 +861,7 @@
           <!-- Arrow -->
           <!-- Img -->
 
-          <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
               </div>
@@ -879,7 +879,7 @@
           <!-- Arrow -->
           <!-- Img -->
 
-          <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
               </div>
@@ -899,7 +899,7 @@
           <!-- Arrow -->
           <!-- Img -->
 
-          <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
               </div>
@@ -908,7 +908,7 @@
           <!-- Img -->
           <!-- Img -->
 
-          <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
             <div class="Grid-cell">
               <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg" alt="New User">
               </div>
@@ -920,7 +920,7 @@
 
 
         <div class="blankHS"></div>
-        <div class="Grid Grid--full wrapper">
+        <div class="Grid Grid--full marginResponsiveGrid wrapper">
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
@@ -1001,7 +1001,7 @@
             <!-- Arrow -->
             <!-- Img -->
 
-            <div class="Grid Grid--full u-textCenter wrapper">
+            <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -1022,7 +1022,7 @@
             <!-- Arrow -->
             <!-- Img -->
 
-            <div class="Grid Grid--full u-textCenter wrapper">
+            <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -1032,7 +1032,7 @@
             <!-- Img -->
             <!-- Img -->
 
-            <div class="Grid Grid--full u-textCenter wrapper">
+            <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -1053,7 +1053,7 @@
             <!-- Arrow -->
             <!-- Img -->
 
-            <div class="Grid Grid--full u-textCenter wrapper">
+            <div class="Grid Grid--full marginResponsiveGrid u-textCenter wrapper">
               <div class="Grid-cell">
                 <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                     alt="New User">
@@ -1089,7 +1089,7 @@
           <div class="blankHXS"></div>
 
 
-          <div class="Grid Grid--full wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid wrapper">
             <div class="Grid-cell">
               <div class="element">
                 <div class="element GreyBg100 leftVerLine ">
@@ -1282,7 +1282,7 @@
           </div>
         </div>
         <div class="blankHS"></div>
-        <div class="Grid Grid--full wrapper">
+        <div class="Grid Grid--full marginResponsiveGrid wrapper">
           <div class="Grid-cell">
             <div class="footerBorder">
               <div class="element">
