--- a/architecture/index.html
+++ b/architecture/index.html
@@ -16,22 +16,22 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="og:title" content="Architectural Portfolio - Vicky Wang">
   <meta property="og:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/architecture">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/architecture">
-  <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="twitter:title" content="Architectural Portfolio - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
 
   <!-- favicon -->
 
