--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/about">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
   <meta property="twitter:title" content="Professional Background and Interests - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- favicon -->
 
@@ -314,63 +314,67 @@
       <p class="tArrow">My Journey <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
-
-  <div class="Grid Grid--full marginResponsiveGrid wrapper">
-    <div class="Grid-cell">
-      <div class="element">
+  <div class="wrapper">
+    <div class="Grid Grid--full marginResponsiveGrid">
+      <div class="Grid-cell">
         <div class="element">
+          <div class="element">
 
-          <div class="progressStepContainer">
-            <ul class="progressX">
-              <li class="progress__item" data-aos="fade-up">
-                <h3> <strong class="Grey700">Art </strong> </h3>
-                <p>Art is the process of channeling emotions and ideas into creative expression. It allows us to
-                  visually represent complex concepts and emotions that are hard to articulate. Engaging with art
-                  enhances our understanding of the design process and opens up new perspectives. It lays the
-                  groundwork for creating distinctive designs through the use of color, composition, and other
-                  elements.
-                </p>
+            <div class="progressStepContainer">
+              <ul class="progressX">
+                <li class="progress__item" data-aos="fade-up">
+                  <h3> <strong class="Grey700">Art </strong> </h3>
+                  <p>Art is the process of channeling emotions and ideas into creative expression. It allows us to
+                    visually represent complex concepts and emotions that are hard to articulate. Engaging with art
+                    enhances our understanding of the design process and opens up new perspectives. It lays the
+                    groundwork for creating distinctive designs through the use of color, composition, and other
+                    elements.
+                  </p>
 
-              </li>
-              <div class="blankHXS"></div>
+                </li>
+                <div class="blankHXS"></div>
 
-              <li class="progress__item" data-aos="fade-up">
-                <h3> <strong class="Grey700">Design </strong> </h3>
-                <p>In design, the core is a powerful creative vision that incorporates creativity, innovation,
-                  meticulousness, and the capacity to think innovatively.
-                </p>
+                <li class="progress__item" data-aos="fade-up">
+                  <h3> <strong class="Grey700">Design </strong> </h3>
+                  <p>In design, the core is a powerful creative vision that incorporates creativity, innovation,
+                    meticulousness, and the capacity to think innovatively.
+                  </p>
 
-              </li>
-              <div class="blankHXS"></div>
+                </li>
+                <div class="blankHXS"></div>
 
-              <li class="progress__item" data-aos="fade-up">
-                <h3> <strong class="Grey700">Architecture </strong> </h3>
-                <p>Architecture involves crafting buildings that are functional and visually appealing, considering the
-                  users' needs, the interplay of various components, and the overall aesthetic. Success in architecture
-                  also means communicating effectively with clients and colleagues, and being organized and efficient.
+                <li class="progress__item" data-aos="fade-up">
+                  <h3> <strong class="Grey700">Architecture </strong> </h3>
+                  <p>Architecture involves crafting buildings that are functional and visually appealing, considering
+                    the
+                    users' needs, the interplay of various components, and the overall aesthetic. Success in
+                    architecture
+                    also means communicating effectively with clients and colleagues, and being organized and efficient.
 
-                </p>
-              </li>
-              <div class="blankHXS"></div>
+                  </p>
+                </li>
+                <div class="blankHXS"></div>
 
-              <li class="progress__item progress__item--active" data-aos="fade-up">
-                <h3> <strong>User experience design </strong> </h3>
-                <p>User experience design is about comprehending the user's desires and behaviors to create products
-                  that are intuitive and fulfilling. It combines an attractive design with a user-friendly interface,
-                  grounded in an understanding of human psychology and current technology trends.
-
-
+                <li class="progress__item progress__item--active" data-aos="fade-up">
+                  <h3> <strong>User experience design </strong> </h3>
+                  <p>User experience design is about comprehending the user's desires and behaviors to create products
+                    that are intuitive and fulfilling. It combines an attractive design with a user-friendly interface,
+                    grounded in an understanding of human psychology and current technology trends.
 
 
 
-                </p>
-            </ul>
+
+
+                  </p>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
+    </div>
   </div>
+
   <!-- My Journey -->
 
   <div class="blankHM"></div>
@@ -619,7 +623,6 @@
 
     </ul>
   </div>
-  <div class="blankHM"></div>
   <!-- message -->
   <div class="blankHL"></div>
   <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
