--- a/architecture/index.html
+++ b/architecture/index.html
@@ -22,7 +22,7 @@
   <meta property="og:url" content="https://vickywang.me/architecture">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -31,7 +31,7 @@
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- favicon -->
 
@@ -464,9 +464,8 @@
 
     </ul>
   </div>
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
   <!-- message -->
-  <div class="blankHM"></div>
   <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
