--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -297,7 +297,7 @@
   </div>
   <!-- site -->
   <!-- message -->
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
   <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
@@ -308,7 +308,7 @@
       <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
     </div>
   </div>
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
 
   <!-- message -->
   <!--back to top-->
