--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -372,9 +372,9 @@
     </div>
   </div>
   <!--renders -->
+  <div class="blankHL"></div>
 
   <!-- message -->
-  <div class="blankHM"></div>
   <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
@@ -385,9 +385,9 @@
       <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
     </div>
   </div>
-  <div class="blankHM"></div>
 
   <!-- message -->
+  <div class="blankHL"></div>
 
   <!--back to top-->
   <button id="myBtn" title="Back to top">
