--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -693,9 +693,9 @@
 
 
 
+  <div class="blankHL"></div>
 
   <!-- message -->
-  <div class="blankHM"></div>
   <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
@@ -706,9 +706,10 @@
       <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
     </div>
   </div>
-  <div class="blankHM"></div>
 
   <!-- message -->
+  <div class="blankHL"></div>
+
   <!--back to top-->
   <button id="myBtn" title="Back to top">
     <div id="dad">
