--- a/design_system/index.html
+++ b/design_system/index.html
@@ -8,27 +8,27 @@
 
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/design_system">
-  <title>Design System Principles by Vicky Wang</title>
+  <title>Scalable Design System Design and Implementation by Vicky Wang</title>
   <meta name="author" content="Vicky W.">
   <meta name="description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Design System Principles by Vicky Wang">
+  <meta property="og:title" content="Scalable Design System Design and Implementation by Vicky Wang">
   <meta property="og:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/design_system">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/design_system">
-  <meta property="twitter:title" content="Design System Principles by Vicky Wang">
+  <meta property="twitter:title" content="Scalable Design System Design and Implementation by Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- favicon -->
 
