--- a/photography/index.html
+++ b/photography/index.html
@@ -9,7 +9,7 @@
 
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/photography">
-  <title>Photographic Artistry by Vicky Wang </title>
+  <title>Nature & Wildlife Photographic Artistry by Vicky Wang</title>
 
   <meta name="author" content="Vicky W.">
   <meta name="description"
@@ -22,7 +22,7 @@
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/photography">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -30,7 +30,7 @@
   <meta property="twitter:title" content="Photographic Artistry by Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- favicon -->
 
@@ -867,11 +867,10 @@
 
     </ul>
   </div>
-  <div class="blankHM"></div>
 
 
   <!-- message -->
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
   <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
