--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -353,7 +353,7 @@
 
 
   <!-- message -->
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
   <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
@@ -364,7 +364,7 @@
       <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
     </div>
   </div>
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
 
   <!-- message -->
   <!--back to top-->
