--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -449,7 +449,7 @@
 
 
   <!-- message -->
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
   <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
@@ -460,7 +460,7 @@
       <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
     </div>
   </div>
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
 
   <!-- message -->
   <!--back to top-->
