--- a/glorify/index.html
+++ b/glorify/index.html
@@ -21,7 +21,7 @@
   <meta property="og:url" content="https://vickywang.me/glorify">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -30,7 +30,7 @@
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- favicon -->
 
@@ -5234,9 +5234,7 @@
   </div>
 
   <!-- message -->
-  <div class="blankHM"></div>
-
-
+  <div class="blankHL"></div>
   <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <h4 class="element">Thanks for stopping by! Hop over to my site for more stuff&#33;</h4>
