--- a/navigation/V2/index.html
+++ b/navigation/V2/index.html
@@ -19,7 +19,7 @@
     content="Discover Vicky Wang's Navigation V2 Development, focusing on user engagement through innovative digital interfaces. A step forward in digital navigation and design.">
   <meta property="og:url" content="https://vickywang.me/navigation/V2/">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -27,7 +27,7 @@
   <meta property="twitter:title" content="Exploring Navigation V2 - Digital Interfaces & User Engagement by Vicky Wang">
   <meta property="twitter:description"
     content="Discover Vicky Wang's Navigation V2 Development, focusing on user engagement through innovative digital interfaces. A step forward in digital navigation and design.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.png">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- favicon -->
 
